# graphicsprogramming_exam

./: CMakeLists.txt  README.md  README.txt
resources/objects/: Blank.mtl  Blank2.mtl
resources/shaders/: light_cube.fs  triangle.fs  triangle.vs
source/: Block.cpp  Block.h  Camera.h  Cube.cpp  Cube.h  Externs.h  ImguiHandler.cpp  ImguiHandler.h  RenderHandler.cpp  RenderHandler.h  Shader.cpp  Shader.h  TextureLoader.cpp  TextureLoader.h  Tunnel.cpp  Tunnel.h  game.cpp  game.h  main.cpp  window.cpp
